--- a/app/css/sections/details.styl
+++ b/app/css/sections/details.styl
@@ -14,12 +14,7 @@
     margin: 0 90px 0 0;
     padding: 0;
     font-weight: normal;
-  }
-
-  nav {
-    position: absolute;
-    top: 0;
-    right: 0;
+    max-width: 1px; // hack to fix overflow
   }
 
   .octicon-mute:hover {
