--- a/app/css/sections/lists.styl
+++ b/app/css/sections/lists.styl
@@ -6,13 +6,12 @@
   -webkit-font-smoothing: antialiased;
 
   h1 {
-    background: url(../img/mark.png) no-repeat;
+    background: url(../img/mark.png) no-repeat center center;
     background-size: 100%;
     text-indent: -9999px;
     overflow: hidden;
     width: 182px;
     height: 18px;
-    margin: 15px 0;
   }
 
   ul {
